--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -25,6 +25,7 @@ jobs:
         ruby-version: 3.2.2
 
     - name: Publish to GPR
+      continue-on-error: true
       run: |
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
