--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -52,9 +52,8 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        printf -- "---\n:rubygems_api_key: rubygems_93fd5eb523cb352288f6e2162d94d8e93f2525f059e7d756\n" > $HOME/.gem/credentials
         gem build *.gemspec
         gem push *.gem
       env:
         GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
-        
