--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -52,7 +52,7 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:rubygems_api_key: rubygems_d74c988212711245809e303f01158fec618236160b9df744\n" > $HOME/.gem/credentials
+        printf -- "---\n:rubygems_api_key:  \n" > $HOME/.gem/credentials
         gem build *.gemspec
         gem push *.gem
       env:
